feat(mobile): UI/UX improvements and logo update
- Add custom animations (float, bounce, scale-in, slide-up)
- Enhance BottomNav with scale and tap feedback animations
- Compact header design with inline beta badge
- Improve Empty State designs with floating icons
- Add card animations with staggered delays
- Update app logo to new TOMOSHIBI design
- Update PWA icons

--- a/apps/mobile/index.html
+++ b/apps/mobile/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SPR探偵事務所 - あなたの日常と物語が、繋がる</title>
+    <title>TOMOSHIBI | 街歩き×謎解きプラットフォーム</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="SPR探偵" />
+    <meta name="apple-mobile-web-app-title" content="TOMOSHIBI" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
 
-    <meta property="og:title" content="SPR探偵事務所 - あなたの日常と物語が、繋がる" />
+    <meta property="og:title" content="TOMOSHIBI | 街歩き×謎解きプラットフォーム" />
     <meta property="og:description" content="日常の行動がポイントになり、現地の謎を解くゲーム化された探偵アプリ" />
     <meta property="og:type" content="website" />
 
