--- a/apps/mobile/index.html
+++ b/apps/mobile/index.html
@@ -6,7 +6,7 @@
     <title>TOMOSHIBI | 街歩き×謎解きプラットフォーム</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Serif+JP:wght@500;700&display=swap" rel="stylesheet">
     <meta name="description" content="日常の行動がポイントになり、現地の謎を解くゲーム化された探偵アプリ。功績を積んで、より難しい依頼に挑戦しよう。" />
     <meta name="author" content="SPR Detective Agency" />
 
