Refactor GamePlay UI: distinct story/puzzle screens, improved aesthetics, localized text, and unifed sidebar menu

--- a/apps/mobile/index.html
+++ b/apps/mobile/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Noto+Serif+JP:wght@500;700&display=swap" rel="stylesheet">
-    <meta name="description" content="日常の行動がポイントになり、現地の謎を解くゲーム化された探偵アプリ。功績を積んで、より難しい依頼に挑戦しよう。" />
-    <meta name="author" content="SPR Detective Agency" />
+    <meta name="description" content="AIで街歩きクエストを生成し、現地で物語と謎解きを楽しむTOMOSHIBIのモバイルアプリ。" />
+    <meta name="author" content="TOMOSHIBI" />
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#006633" />
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
 
     <meta property="og:title" content="TOMOSHIBI | 街歩き×謎解きプラットフォーム" />
-    <meta property="og:description" content="日常の行動がポイントになり、現地の謎を解くゲーム化された探偵アプリ" />
+    <meta property="og:description" content="AIで街歩きクエストを生成し、現地で物語と謎解きを楽しむTOMOSHIBIのモバイルアプリ。" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
